release 1.1.2-ea (2009-09)
- Fixed issue 161
  https://jersey.dev.java.net/issues/show_bug.cgi?id=161
  The Jersey client can now be used completely independently of the Jersey
  server side when errors are produces by certain message body readers and
  writers.
  Response and Response.ResponseBuilder are now implemented such that they
  can be used on the client side (without having to include jersey server
  dependencies). This is important for some message body readers and writers
  that may throw WebApplicationException, which in turn defers to Response
  for building a response.
- Fixed issue 337
  https://jersey.dev.java.net/issues/show_bug.cgi?id=337
  The LW HTTP container logs an IOException (passed from Jersey) and attempts
  to set the status code to 500. If the statuss and headers are already
  committed it is not possible to set the status code and the response will be
  terminated prematurely.
- Fixed issue 276
  https://jersey.dev.java.net/issues/show_bug.cgi?id=276
  Ensure that localized messages are correctly resolved in Web containers.
- Ensure that ContainerResponseWriter.finish is called consistently, for example
  when no response entity is present.
- Cleaned up declaration of checked exceptions from the abstract message body
  reader/writer classes for JAXB and removed the declaration of IOException.
- Fixed issue 334
  https://jersey.dev.java.net/issues/show_bug.cgi?id=334
  UriBuilder.segment and UriBuilder.matrixParam should percent encode ';'
  characters.
- Adding logging when Jersey cannot map an exception to a Response using
  registered ExceptionMapper and the exception gets re-thrown to the HTTP
  container.
- Fixed issue 280
  https://jersey.dev.java.net/issues/show_bug.cgi?id=280
  For the "natural" JSON convention, the humanReadableFormatting option
  now could be set, so that the output JSON contains new-line characters
  and indentation, which makes is easy to read for humans